# amazon-kinesis-video-streams-signaling

./: .gitmodules  CMakeLists.txt  README.md  signalingFilePaths.cmake
source/: signaling_api.c
source/include/: signaling_api.h  signaling_config_defaults.h  signaling_data_types.h
test/unit-test/: CMakeLists.txt  catch_assert.h  cmock_build.cmake
test/unit-test/signaling_api/: signaling_api_utest.c  ut.cmake
